--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[Link](http://azamahmed.tech)",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch scss/main.scss:public/css"
+    "sass": "sass --watch scss:public/css"
   },
   "repository": {
     "type": "git",
